--- a/.gitignore
+++ b/.gitignore
@@ -49,7 +49,8 @@ Temporary Items
 # these rules might exclude image files for figures etc.
 # *.ps
 # *.eps
-# *.pdf
+*.pdf
+*.fdb_latexmk
 
 ## Generated if empty string is given at "Please type another file name for output:"
 .pdf
